Replace UseParNewGC as it's been removed in Java 10